[package]
name = "rustberry"
version = "0.1.0"
authors = ["Patrik Cyvoct <patrik@ptrk.io>"]

[profile.dev]
panic = "abort"
debug = true

[profile.test]
debug = true

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.2.3"
spin = "0.4.6"
once = "0.3.2"
linked_list_allocator = "0.6.3"
register = "0.1.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
